<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/blueMain" >

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="#00000000"
            android:src="@drawable/backimg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center|center_horizontal"
            android:text="黑名单"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>
    
    <ListView android:id="@+id/lvHeimingdan" android:layout_width="wrap_content" android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="14dp"
        android:visibility="gone"
        android:background="@color/white"
        android:orientation="vertical" >
         <EditText
            android:id="@+id/etYuanPwd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:hint="@string/o_password"
            android:inputType="textPassword"
            android:singleLine="true" />
           <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/greyxian" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:hint="@string/n_password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/greyxian" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" >

            <TextView
                android:layout_width="80dip"
                android:layout_height="wrap_content"
                android:paddingBottom="3dip"
                android:text="@string/password"
                android:textColor="@color/black"
                android:visibility="gone" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="45dip"                
                android:background="@color/white"
                android:hint="@string/s_password"
                android:inputType="textPassword" />
        </RelativeLayout>

       
    </LinearLayout>

     

</LinearLayout>